assets/css/styles.css
*, *:before, *:after {
  box-sizing: border-box;
  margin: 0px;
  padding: 0px;
}

body {
  background-color: #eee;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
  color: black;
}

.iframe-container {
  display: flex;
  justify-content: center;
  margin: 10px 0;
}

img { /* 100% Width and height to have image equal to size of container div */
  width: 100%;
  height: 100%;
}

.content-wrapper { /* Made so content is not overlapepd by fixed header */
  position: relative;
  top: 15vh;
}

/* Header below */

header {
  position: fixed;
  display: flex;
  background-color: #eee;
  height: 145px;
  width: 100vw;
  padding: 2vh;
  opacity: 100%;
  font-size: 1.1rem;
  z-index: 1;
}

header ul li {
  padding: 0.2vh;
}

header .logo {
  display: inline-block;
  width: 300px;
  height: 40px;
  background-color: #;
}

/* Header above */

/* Footer below */

footer {
  display: flex;
  align-items: center;
  height: 10vh;
  width: 100vw;
  background-color: #ddd;
}

footer table tr:first-child {
  font-size: 1.15rem;
}

/* Footer above */

/* Form below */

.form {
  text-align: center;
  height: 200px;
  padding: 10px;
}

input {
  margin: 15px;
}

input[type="submit"] {
  display: block;
  margin: 0px auto;
  width: 30vw;
  background-color: #f1c40f;
  border: none;
  padding: 5px;
  font-weight: bold;
  font-size: 1.2rem;
}

input[type="email"] {
  width: 50vw;
  height: 35px;
  padding: 3px;
}

/* Form above */

/* Features section below */

.features-section p {
  margin-bottom: 7vh;
  font-size: 1.2rem;
}

.features-section h2 {
  font-size: 1.5rem;
}

.features-flex-container {
  display: flex;
}

/* Features section above */

/* Pricing section below */

.pricing-section {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.pricing-section > div {
  width: 300px;
  height: 300px;
  margin: 0.5vh 0 0.5vh 0;
  border: 1px solid black;
}

.pricing-section div div { /* For Select button */
  margin: 0px auto;
  margin-top: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.25rem;
  width: 100px;
  height: 40px;
  background-color: #f1c40f;
}

.pricing-section > div h3 {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.3rem;
  height: 15%;
  background-color: #ddd;
}

.pricing-section ul {
  text-align: center;
}

.pricing-section ul li {
  padding: 0.5vh 0 0.5vh 0;
}

.pricing-section ul li:first-child {
  font-size: 1.5rem;
  font-weight: bold;
  padding: 2vh 0 2vh 0;
}

/* Pricing section above */

@media (max-width: 550px) {
  body {
    text-align: center;
  }

  header {
    flex-direction: column;
    align-items: center;
    font-size: 1.2rem;
  }

  section img {
    width: 0;
  }

  iframe {
    width: 100vw;
    border: 0px;
  }

  .pricing-section {
    height: 1000px;
  }
}

@media (min-width: 551px) {
  header {
    height: 100px;
    justify-content: space-around;
  }

  header nav {
    height: 50%;
  }

  header nav ul  {
    display: flex;
    padding: 15px;
  }

  header nav ul li {
    padding-left: 5px;
  }

  footer {
    justify-content: space-around;
  }

  .content-wrapper {
    top: 100px;
  }

  .features-section img {
    display: inline-block;
    width: 70px;
    margin: 0 5vw;
  }

  .pricing-section {
    height: 1000px;
  }

  table {
    text-align: center;
  }

  iframe {
    width: 600px;
  }

  input[type="email"] {
    max-width: 500px;
  }

  input[type="submit"] {
    max-width: 350px;
  }

}



@media (min-width: 900px) {
  .pricing-section {
    flex-direction: row;
    justify-content: center;
    height: 450px;
  }

  .pricing-section > div {
    margin: 10px;
  }

  footer {
    width: 900px;
    margin: 0px auto;
  }

  .features-section {
    margin: 0px auto;
    width: 950px;
  }
}

@media (min-width: 950px) {
  footer {
    width: 950px;
  }
}


/* Add Breakpoints Here */
/* Apply to certain size and above */

